--- a/iOS/gongan/policeOnline/ViewControllers/GGPoliceDetailViewController.xib
+++ b/iOS/gongan/policeOnline/ViewControllers/GGPoliceDetailViewController.xib
@@ -47,7 +47,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 30}, {111, 139}}</string>
 								<reference key="NSSuperview" ref="815988786"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="721763238"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -66,7 +65,6 @@
 										<int key="NSvFlags">274</int>
 										<string key="NSFrame">{{134, 0}, {1, 113}}</string>
 										<reference key="NSSuperview" ref="751389258"/>
-										<reference key="NSWindow"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<object class="NSColor" key="IBUIBackgroundColor">
 											<int key="NSColorSpace">3</int>
@@ -80,7 +78,6 @@
 								</array>
 								<string key="NSFrame">{{11, 347}, {288, 113}}</string>
 								<reference key="NSSuperview" ref="815988786"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="815861741"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -95,7 +92,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{158, 30}, {55, 28}}</string>
 								<reference key="NSSuperview" ref="815988786"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1072316942"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -127,7 +123,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{158, 56}, {55, 28}}</string>
 								<reference key="NSSuperview" ref="815988786"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="917715006"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -148,7 +143,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{158, 81}, {55, 28}}</string>
 								<reference key="NSSuperview" ref="815988786"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="685886406"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -169,7 +163,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{162, 152}, {137, 30}}</string>
 								<reference key="NSSuperview" ref="815988786"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="506047249"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -203,7 +196,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 202}, {102, 24}}</string>
 								<reference key="NSSuperview" ref="815988786"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="346352254"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -225,7 +217,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 252}, {102, 24}}</string>
 								<reference key="NSSuperview" ref="815988786"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="922670931"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -247,7 +238,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 299}, {102, 24}}</string>
 								<reference key="NSSuperview" ref="815988786"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="269356536"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -269,7 +259,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{208, 33}, {91, 21}}</string>
 								<reference key="NSSuperview" ref="815988786"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="404040089"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -297,7 +286,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{208, 59}, {85, 21}}</string>
 								<reference key="NSSuperview" ref="815988786"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="62356290"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -318,7 +306,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{208, 85}, {102, 59}}</string>
 								<reference key="NSSuperview" ref="815988786"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="251618336"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -348,7 +335,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{144, 201}, {155, 32}}</string>
 								<reference key="NSSuperview" ref="815988786"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="638018873"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -369,7 +355,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{144, 248}, {155, 32}}</string>
 								<reference key="NSSuperview" ref="815988786"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1045011630"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -390,7 +375,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{144, 295}, {155, 32}}</string>
 								<reference key="NSSuperview" ref="815988786"/>
-								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<int key="IBUITag">103</int>
@@ -410,7 +394,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{24, 388}, {83, 24}}</string>
 								<reference key="NSSuperview" ref="815988786"/>
-								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -431,7 +414,6 @@
 								<int key="NSvFlags">-2147483356</int>
 								<string key="NSFrame">{{11, 445}, {310, 16}}</string>
 								<reference key="NSSuperview" ref="815988786"/>
-								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -456,7 +438,6 @@
 						</array>
 						<string key="NSFrameSize">{320, 504}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="218867552"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -467,7 +448,6 @@
 				</array>
 				<string key="NSFrame">{{0, 64}, {320, 504}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="815988786"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -842,104 +822,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">139</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">GGBaseViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/GGBaseViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">GGPoliceDetailViewController</string>
-					<string key="superclassName">GGBaseViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="CALL:">id</string>
-						<string key="getMyfavorite:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="CALL:">
-							<string key="name">CALL:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="getMyfavorite:">
-							<string key="name">getMyfavorite:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="btnAddFavor">UIButton</string>
-						<string key="btnPhone">UIButton</string>
-						<string key="btnStationPhone">UIButton</string>
-						<string key="btnSuperviserPhone">UIButton</string>
-						<string key="ivPhoto">UIImageView</string>
-						<string key="lblLast">UILabel</string>
-						<string key="lblName">UILabel</string>
-						<string key="lblNumber">UILabel</string>
-						<string key="lblStation">UILabel</string>
-						<string key="svContent">UIScrollView</string>
-						<string key="viewPanelBg">UIView</string>
-						<string key="viewVirtLine">UIView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="btnAddFavor">
-							<string key="name">btnAddFavor</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="btnPhone">
-							<string key="name">btnPhone</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="btnStationPhone">
-							<string key="name">btnStationPhone</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="btnSuperviserPhone">
-							<string key="name">btnSuperviserPhone</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="ivPhoto">
-							<string key="name">ivPhoto</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="lblLast">
-							<string key="name">lblLast</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="lblName">
-							<string key="name">lblName</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="lblNumber">
-							<string key="name">lblNumber</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="lblStation">
-							<string key="name">lblStation</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="svContent">
-							<string key="name">svContent</string>
-							<string key="candidateClassName">UIScrollView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="viewPanelBg">
-							<string key="name">viewPanelBg</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="viewVirtLine">
-							<string key="name">viewVirtLine</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/GGPoliceDetailViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
